Fixed printable uri on smaller list views
https://coveord.atlassian.net/browse/KIT-1043

--- a/packages/atomic/src/components/result-template-components/atomic-result-printable-uri/atomic-result-printable-uri.pcss
+++ b/packages/atomic/src/components/result-template-components/atomic-result-printable-uri/atomic-result-printable-uri.pcss
@@ -32,6 +32,7 @@ atomic-result-printable-uri {
       }
     }
 
+    white-space: nowrap;
     &:last-child {
       white-space: normal;
 
